<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Are we there yet?</string>
    
    <string name="calcSpeed">How fast?</string>
    <string name="calcDistance">How far?</string>
    <string name="calcTime">How long?</string>
    
    <string name="selectSpeed">Choose Velocity</string>
    <string name="selectDistance">Choose Distance</string>
    <string name="selectTime">Choose Time</string>
    
    <string name="measureSpeed">Measure Velocity</string>
    <string name="measureDistance">Measure Distance</string>
    <string name="measureTime">Measure Time</string>
    
    <string name="Speed">Velocity</string>
    <string name="Distance">Distance</string>
    <string name="Time">Time</string>
    
    <string name="measure">Measure&#8230;</string>
    
    <string name="speed.foot">By foot</string>
    <string name="speed.bike">Bike</string>
    <string name="speed.car">Car, speed limit</string>
    <string name="speed.autobahn">Car, german autobahn</string>
    <string name="speed.airplane">Airbus A380</string>
    <string name="speed.mach1">Speed of sound (Mach 1)</string>
    <string name="speed.rocket">Rocket</string>
    <string name="speed.warp1">Speed of light (Warp 1)</string>
    <string name="speed.warp2">Warp 2</string>
    <string name="speed.warp3">Warp 3</string>
    <string name="speed.warp4">Warp 4</string>
    <string name="speed.warp9">Warp 9</string>
    <string name="speed.warp10">Warp 10</string>
    
    <string name="dist.moon">Moon</string>
    <string name="dist.sun">Sun</string>
    <string name="dist.mars">Mars</string>
    <string name="dist.nextpsys">Alpha Centauri</string>
    <string name="dist.nextgalaxy">Canis Major Dwarf Galaxy</string>
    
    <string name="time.moon">Lunar phase</string>
    <string name="time.pregnancy">Pregnancy</string>
    <string name="time.decade">Decade</string>
    <string name="time.ttl">Life expectancy</string>
    <string name="time.p239">Plutonium 239 half-life</string>
    <string name="time.calc42">Calculate 42</string>
    <string name="time.u235">Uranium 235 half-life</string>
    <string name="time.earth">Earth\'s age</string>
    <string name="time.universe">Universe\'s age</string>
    
	<string name="points">&#8230;</string>
    
	<string name="zeroSpeed">0.000 km/h</string>
	<string name="zeroDistance">0.000 m</string>
	<string name="zeroTime">00:00:00.000</string>
	
	<string name="s1">1s</string>
	<string name="s5">5s</string>
	<string name="ok">OK</string>
	<string name="stop">Stop</string>
	<string name="start">Start</string>
</resources>
