<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aMeasureDistance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp" />
    
    <TextView
        android:id="@+id/textDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/zeroDistance"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <SeekBar
        	android:id="@+id/seekBar"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:max="40"
        	android:progress="40"
    	/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/s1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/s5"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    	
   	</LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/butStartStop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/start"
            android:textOn="@string/stop" />

        <Button
            android:id="@+id/butOK"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>
