<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/butCalcTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcTime" />

    <Button
        android:id="@+id/butCalcDistance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcDistance" />

    <Button
        android:id="@+id/butCalcSpeed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcSpeed" />

</LinearLayout>